# be-final

./: pyproject.toml
alembic/: env.py
alembic/versions/: ef2943e291d9_initial_migration.py
src/: main.py
src/api/: __init__.py
src/api/v1/: auth.py  snippets.py  user.py
src/auth/: auth.py
src/core/: config.py  logger.py
src/db/: db.py
src/models/: __init__.py  base.py  role.py  snippet.py  user.py
src/schemas/: snippet.py  user.py
src/services/: snippet.py
